<resources>
    <string name="app_name">TechNet</string>
    <string name="email">מייל</string>
    <string name="FirstName">שם פרטי</string>
    <string name="LastName">שם משפחה</string>
    <string name="pass">סיסמה</string>
    <string name="report_malfunction">דיווח תקלה</string>
    <string name="school_detailes">פרטי בית הספר</string>
    <string name="institution_name">שם מוסד</string>
    <string name="institution_Symbol_num">מספר מוסד</string>
    <string name="hint_edt_school_name">בית ספר</string>
    <string name="town">עיר:</string>
    <string name="hint_edt_town">עיר</string>
    <string name="street">רחוב:</string>
    <string name="address">כתובת</string>
    <string name="hint_edt_street">רחוב</string>
    <string name="number">מספר:</string>
    <string name="malfunction_detailes_headline">פרטי התקלה</string>
    <string name="device_type">סוג המכשיר</string>
    <string name="hint_edt_device_type">טלפון/מחשב נייח/מחשב נייד</string>
    <string name="model">דגם:</string>
    <string name="hint_edt_model">דגם</string>
    <string name="detail_fault">פירוט התקלה</string>
    <string name="report">דיווח</string>
    <string name="institution_detailes">פרטי מוסד</string>
    <string name="Fill_institution_detailes">אנא מלא פרטי מוסד : </string>
    <string name="signUp">הרשמה</string>
    <string name="phone">טלפון</string>

    <!-- Strings for side bar-->
    <string name="menu_home">דף הבית</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_move_to_update_profile">עדכון פרופיל</string>
    <string name="action_disconnect">התנתק</string>


    <!-- Strings for side bar maintenance man -->
    <string name="menu_report_malfunction">דיווח תקלה</string>
    <string name="menu_inventory">מלאי</string>
    <string name="menu_add_product">הוספת מוצר</string>


    <!-- Strings for side bar technician man -->
    <string name="menu_open_malfunction">תקלות פנויות</string>
    <string name="menu_my_malfunctions">תקלות לטיפול</string>

    <string-array name="role">
        <item>בחר</item>
        <item>אב בית</item>
        <item>טכנאי</item>
    </string-array>

    <string-array name="area">
        <item>בחר</item>
        <item>שומרון</item>
        <item>ירושלים</item>
        <item>יהודה</item>
        <item>אילת</item>
        <item>צפון</item>
        <item>גולן</item>
        <item>תל אביב</item>
        <item>שרון</item>
        <item>דרום</item>
        <item>עמק הירדן</item>
    </string-array>


    <string name="title_activity_maintenance_man">MaintenanceManActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="company">חברה</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="connect">התחברות</string>
    <string name="forgrtPass">שכחתי סיסמה</string>
    <string name="nextScreen">הבא</string>
    <string name="device">דגם</string>
    <string name="yearOfProduction">שנת יצור</string>
    <string name="dateOfResponsibility">תאריך אחריות</string>
    <string name="type">סוג</string>
    <string name="OK">אישור</string>
    <string name="my_malfunctions_reports">התקלות שפתחתי</string>
    <string name="click_me">Click me!</string>
    <string name="name_something">name something</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fName">שם פרטי</string>
    <string name="change_pass_text">שינוי סיסמה</string>
    <string name="update_txt">עדכן</string>
    <string name="change_city_txt">שנה עיר</string>
    <string name="change_address_txt">שנה כתובת</string>
    <string name="change_ins_details_txt">שינוי פרטי מוסד</string>
    <string name="current_pass_confarmation_txt">סיסמה נוכחית לאימות</string>
    <string name="same_pass_txt">אותה סיסמה</string>
    <string name="last_name_txt">שם משפחה</string>
    <string name="first_name_txt">שם פרטי</string>
    <string name="update_details_txt">עדכון פרטים</string>
    <string name="product_type_txt">סוג מוצר:</string>
    <string name="device_txt">דגם:</string>
    <string name="company_txt">חברה:</string>
    <string name="malfunction_details_txt">פרטי תקלה:</string>
    <string name="tech_details_txt">פרטי טכנאי:</string>
    <string name="change_work_area">שינוי אזור עבודה</string>
    <string name="mainManExplanation">כאן תוכל לדווח על בעיות והתקלות שלך ושטכנאי באזורך יגיע לתקן \nבנוסף תוכל לעקוב אחרי המלאי שלך ואחרי התקלות שפתחת</string>
    <string name="update_details">עידכון פרופיל</string>
    <string name="adrr">כתובת</string>
    <string name="cityy">עיר</string>
    <string name="waiting_for_payment">תשלומים ממתינים</string>
    <string name="mot_existing_malfunction_to_display">לא קיימות תקלות להצגה</string>
    <string name="cancel_malfunction_txt">למחיקת תקלה</string>
    <string name="status_header_txt">סטטוס:</string>
    <string name="wanted_payment">תשלום מבוקש:</string>
    <string name="for_payment_txt">לתשלום</string>
    <string name="sms_permission_available">בקשת התשלום תשלח בSMS</string>
    <string name="sms_access_required">"נדרשת הרשאת SMS כדי לשלוח בקשת תשלום "</string>
    <string name="approve_pay_at_price">מאשר תשלום בסך</string>
    <string name="sms_permission_granted">קיימת הרשאת SMS, בקשת התשלום תשלח בהודעה</string>
    <string name="sms_permission_denied">לא אושרה הרשאת SMS. לא תשלח הודעה לבקשת תשלום .</string>
    <string name="school_name">בית ספר:</string>
    <string name="address_header">כתובת:</string>
    <string name="to_handle">לטיפול</string>
    <string name="go_back">חזור</string>
    <string name="awates_payment">מחכה לתשלום</string>
    <string name="payed">שולם</string>
</resources>