<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_main_man"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report_malfunction"
            android:icon="@drawable/ic_menu_report_malfunction"
            android:title="@string/menu_report_malfunction" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_menu_inventory"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_add_new_product"
            android:title="@string/menu_add_product" />
    </group>
</menu>