<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_technician"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_open_malfunction"
            android:icon="@drawable/ic_menu_open_malfunctions"
            android:title="@string/menu_open_malfunction" />
        <item
            android:id="@+id/nav_my_malfunctions"
            android:icon="@drawable/ic_menu_schedule_my_malfunctions"
            android:title="@string/menu_my_malfunctions" />
    </group>
</menu>