<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_main_man"
    app:startDestination="@+id/nav_home_main_man">

    <fragment
        android:id="@+id/nav_home_main_man"
        android:name="com.example.tecknet.view.home_maintenance_man.HomeFragmentMainMan"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_maintenance_man">
        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.UserInt"
            app:nullable="true" />
        <argument
            android:name="institution"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.InstitutionDetailsInt"
            app:nullable="true" />
        <argument
            android:name="institution_symble"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/nav_update_details"
        android:name="com.example.tecknet.view.update_profile_main_man.UpdateProfileMainManFragment"
        android:label="@string/update_details"
        tools:layout="@layout/fragment_update_profile_main_man">
        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.UserInt"
            app:nullable="true" />
        <argument
            android:name="institution"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.InstitutionDetailsInt"
            app:nullable="true" />
        <argument
            android:name="institution_symble"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/nav_report_malfunction"
        android:name="com.example.tecknet.view.report_malfunction_maintenance_man.ReportMalfunctionFragment"
        android:label="@string/menu_report_malfunction"
        tools:layout="@layout/fragment_report_malfunction_maintenance_man">
        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.UserInt"
            app:nullable="true" />
        <argument
            android:name="institution"
            android:defaultValue="@null"
            app:argType="com.example.tecknet.model.InstitutionDetailsInt"
            app:nullable="true" />
        <argument
            android:name="institution_symbol"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.tecknet.view.inventory_maintenance_man.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory_maintenance_man" />
    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.tecknet.view.add_product_maintenance_man.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_add_product_maintenance_man" />
    <action
        android:id="@+id/pass_nav_report_malfunction"
        app:destination="@id/nav_report_malfunction" />
    <fragment
        android:id="@+id/nav_main_man_malfunctions"
        android:name="com.example.tecknet.view.maintenance_man_malfunctions.MainManMalfunctionsFragment"
        android:label="@string/my_malfunctions_reports"
        tools:layout="@layout/fragment_manaintance_man_malfunctions" />

    <fragment
        android:id="@+id/nav_waiting_for_payment"
        android:name="com.example.tecknet.view.waiting_for_payment.WaitingForPayment"
        android:label="ממתינים לתשלום"
        tools:layout="@layout/fragment_maintenance_waiting_for_payment">

    </fragment>
</navigation>