<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.update_profile_main_man.UpdateProfileMainManFragment"
    android:id="@+id/update_main_man_fragment"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroundnew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/update_details_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/change_fName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/first_name_txt"
        android:inputType="text"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintWidth_percent=".35" />

    <EditText
        android:id="@+id/change_lName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/last_name_txt"
        android:inputType="text"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/change_fName"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".35" />

    <TextView
        android:id="@+id/change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="serif"
        android:text="@string/change_pass_text"

        android:textColor="@color/black"

        android:textSize="20dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_lName"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintWidth_percent=".35"
        app:layout_constraintTop_toBottomOf="@id/change_pass" />

    <EditText
        android:id="@+id/new_pass_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/same_pass_txt"
        android:inputType="textPassword"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_pass"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_pass"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent=".35" />

    <EditText
        android:id="@+id/curr_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/current_pass_confarmation_txt"
        android:inputType="textPassword"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/new_pass"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".8" />


    <TextView
        android:id="@+id/change_ins_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="serif"
        android:text="@string/change_ins_details_txt"

        android:textColor="@color/black"

        android:textSize="20dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_pass"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/change_insAdrr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"

        android:hint="@string/change_address_txt"
        android:inputType="text"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintWidth_percent=".35"
        app:layout_constraintTop_toBottomOf="@id/change_ins_details" />

    <EditText
        android:id="@+id/change_insCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/change_city_txt"
        android:inputType="text"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_pass"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_ins_details"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent=".35" />

    <Spinner
        android:id="@+id/change_insArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:entries="@array/area"
        android:minHeight="40dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/change_insAdrr"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent=".8"></Spinner>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/update_txt"
        android:textColor="@color/white"

        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_insArea"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout >