<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_list_view">
  <TextView
      android:layout_width="402dp"
      android:layout_height="match_parent"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="15dp"
      android:layout_marginTop="5dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:text="@string/malfunction_details_txt"
      android:textAlignment="viewStart"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:layout_alignParentRight="true"
      android:layout_marginLeft="15dp"
      android:gravity="start" />

  <TextView
      android:id="@+id/malfunction_info_maintenance_payment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="15dp"
      android:layout_marginTop="5dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:text="@string/malfunction_details_txt"
      android:textAlignment="viewStart"
      android:textColor="@color/black"
      android:layout_alignParentRight="true"
      android:layout_marginRight="15dp"
      android:gravity="start" />
    <TextView
        android:layout_width="402dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/malfunction_info_maintenance_payment"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tech_details_txt"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:gravity="start" />

  <TextView
      android:id="@+id/tech_info_maintenance_payment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/malfunction_info_maintenance_payment"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="15dp"
      android:layout_marginTop="5dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:text="@string/tech_details_txt"
      android:textAlignment="viewStart"
      android:textColor="@color/black"
      android:layout_alignParentRight="true"
      android:layout_marginRight="15dp"
      android:gravity="start" />

  <TextView
      android:layout_width="402dp"
      android:layout_height="match_parent"
      android:layout_below="@+id/tech_info_maintenance_payment"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="15dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:layout_marginEnd="15dp"
      android:paddingBottom="10dp"
      android:text="@string/wanted_payment"
      android:textAlignment="viewStart"
      android:textColor="@color/black"
      android:textStyle="bold"
      android:layout_alignParentRight="true"
      android:gravity="start" />

  <TextView
      android:id="@+id/payment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tech_info_maintenance_payment"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="15dp"
      android:layout_marginTop="5dp"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      android:paddingBottom="10dp"
      android:text="@string/wanted_payment"
      android:textAlignment="viewStart"
      android:textColor="@color/black"
      android:layout_alignParentRight="true"
      android:layout_marginRight="15dp"
      android:gravity="start" />

  <Button
      android:id="@+id/btn_payment"
      android:layout_width="134dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/payment"
      android:layout_centerInParent="true"
      android:layout_marginTop="18dp"
      android:text="@string/for_payment_txt" />

</RelativeLayout>

